# sleeptool-rs

./: Cargo.toml  Orignal.txt  README.md  build.rs  generate_beautiful_icons.py  generate_icons.py  resources.rc
assets/: icon.af
assets/icons/: cpu.rgba  cpu_16.rgba  cpu_16_dark.rgba  cpu_32.rgba  cpu_32_dark.rgba  cpu_dark.rgba  default.rgba  default_16.rgba  default_16_dark.rgba  default_32.rgba  default_32_dark.rgba  default_dark.rgba  disk.rgba  disk_16.rgba  disk_16_dark.rgba  disk_32.rgba  disk_32_dark.rgba  disk_dark.rgba  input.rgba  input_16.rgba  input_16_dark.rgba  input_32.rgba  input_32_dark.rgba  input_dark.rgba  network.rgba  network_16.rgba  network_16_dark.rgba  network_32.rgba  network_32_dark.rgba  network_dark.rgba  paused.rgba  paused_16.rgba  paused_16_dark.rgba  paused_32.rgba  paused_32_dark.rgba  paused_dark.rgba  printer.rgba  process.rgba  process_16.rgba  process_16_dark.rgba  (+9 more)
src/: cli.rs  config.rs  engine.rs  error.rs  lib.rs  logging.rs  main.rs  platform.rs  platform_win32.rs  settings_gui.rs  sleep.rs  state.rs  tray.rs  warning.rs
src/monitors/: cpu.rs  disk.rs  input.rs  mod.rs  network.rs  printer.rs  process.rs  sound.rs  threshold.rs
src/platform/: mod.rs  traits.rs  types.rs
src/platform_win32/: audio.rs  mod.rs  notify.rs  pdh.rs  power.rs  registry.rs  util.rs
src/settings_gui/: list_utils.rs  mod.rs
src/tray/: icon.rs  menu.rs  mod.rs
tests/: cli_tests.rs  config_tests.rs  engine_tests.rs  integration_tests.rs  list_utils_tests.rs  monitor_tests.rs  platform_subtrait_tests.rs  threshold_tests.rs
(+1 files in other folders)
